EXTRA_DIST =				\
	aclocal-include.m4		\
	codeset.m4			\
	compiler-flags.m4		\
	curses.m4			\
	gettext.m4			\
	glibc21.m4			\
	gnome-bonobo-check.m4		\
	gnome-common.m4			\
	gnome-fileutils.m4		\
	gnome-ghttp-check.m4		\
	gnome-gnorba-check.m4		\
	gnome-guile-checks.m4		\
	gnome-libgtop-check.m4		\
	gnome-libgtop-sysdeps.m4	\
	gnome-objc-checks.m4		\
	gnome-orbit-check.m4		\
	gnome-print-check.m4		\
	gnome-pthread-check.m4		\
	gnome-support.m4		\
	gnome-undelfs.m4		\
	gnome-vfs.m4			\
	gnome-x-checks.m4		\
	gnome-xml-check.m4		\
	gnome.m4			\
	gperf-check.m4			\
	iconv.m4			\
	intdiv0.m4			\
	inttypes-pri.m4			\
	inttypes.m4			\
	inttypes_h.m4			\
	isc-posix.m4			\
	lcmessage.m4			\
	lib-ld.m4			\
	lib-link.m4			\
	lib-prefix.m4			\
	linger.m4			\
	need-declaration.m4		\
	progtest.m4			\
	stdint_h.m4			\
	uintmax_t.m4			\
	ulonglong.m4
