figs =	\
	figures/connections-window.png	\
	figures/main-window.png		\
	figures/mudlist-window.png	\
	figures/preferences-window.png	\
	figures/profiles-window.png
docname = gnome-mud
lang = C
omffile = gnome-mud-C.omf
entities =
sgml_ents =
include $(top_srcdir)/doc/sgmldocs.make
dist-hook: app-dist-hook
