include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-mud-manual
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = figures/connections-window.png figures/main-window.png figures/mudlist-window.png figures/preferences-window.png figures/profiles-window.png

DOC_LINGUAS =

