figs =	\
	figures/connections-window.png	\
	figures/main-window.png		\
	figures/mudlist-window.png	\
	figures/preferences-window.png	\
	figures/profiles-window.png
docname = gnome-mud-manual
lang = C
omffile = gnome-mud-manual-C.omf
entities =
sgml_ents =
include $(top_srcdir)/doc/xmldocs.make
dist-hook: app-dist-hook
